# batch-fft

./: .gitignore  Cargo.toml  README.md  compare_all.py  compare_all_fair.py  compare_all_with_mkl.py  cpp_fftw_results.csv  fftw_results_f32.csv  mkl_results_f32.csv  rust_cpu_fair.csv  rust_cpu_results.csv
cpp-version/: .gitignore  CMakeLists.txt  README.md  benchmark_fftw.py  fftw_results_f32.csv
cpp-version/src/: batch_fft.cpp
cuda/: .gitignore  CMakeLists.txt  README.md  benchmark_cuda.py  cuda_cpp_results.csv
cuda/examples/: benchmark.sh
cuda/src/: batch_fft.cu  cuda_helpers.h
mkl-version/: CMakeLists.txt  README.md  benchmark_mkl.py
mkl-version/src/: batch_fft.cpp
rust-cuda/: Cargo.toml  FAIR_COMPARISON.md  README.md  build.rs  cuda_fair_comparison.csv
rust-cuda/examples/: benchmark.sh  compare_fair.py  rust_cuda_results.csv
rust-cuda/src/: cuda_ffi.rs  cufft_ffi.rs  main.rs
src/: main.rs
